com.palm.codepoet.papyrus/app/reading/BookReader.css
/* ... */
.book-reader-main .white {
	background: #FFFFFF;
}

.book-reader-main .sepia {
	background: #E5DBC6;
}

.book-reader-main .black {
	background: #353535;
}

.book-reader-top {
	position: absolute;
	height: 45px;
	right: 65px;
	background: none !important;
	left: 0px;
	z-index: 105;
}

.book-reader-top-left .enyo-button-icon {
	margin: 7px 5px 5px 5px;
}

.top-row-controls {
	z-index: 105;
	position: absolute;
	top: 0;
	width: 100%;
}

.dogearButton{
	background-image: url(../../images/reader-icon-dog-ear.png);
	width: 55px;
	height: 55px;
	vertical-align: baseline;
/*	margin-left: -40px;*/
}

.enyo-button-depressed .dogearButton {
	background-position: 0 -55px;
}

.enyo-button-down .dogearButton {
	background-position: 0 -55px;
}

.reader-dogear {
	position: absolute;
	right: 1px;
	z-index: 110;
	top: -1px;
	width: 55px;
	overflow: hidden;
	height: 55px;
}

.top-row-controls .book-reader-top {
	z-index: 105;
}

.location-info-bar {
	margin: 0 30px;
}

.top-row-bar {
	margin: 0 0 0 50px;
}

.reader-search-box .search-field {
	width: 247px;
	margin: 2px 0 2px -200px;
}

.reader-search-box .clear-btn {
	margin: -1px 0 0 -245px ;
}

.bottom-row-controls {
	z-index: 105;
	position: absolute;
	bottom: 0;
	width: 100%;
	padding-right:15px;
	background: none !important;
}

.book-reader-top-right {
	-webkit-box-align: center; /* vertical */
	-webkit-box-pack: end !important; /* horizontal */
	z-index: 2;
	position: relative;
	right: 0px;
	margin-right: 55px;
}

.book-reader-top-right .search-field .enyo-button-icon {
	margin: 7px 0 7px 5px;
}

.book-reader-top-right .search-pill-container {
	position: absolute;
	right: 0;
	top: 10px;
}

.krf-plugin {
	position:absolute;
	top:0;
	left:0;
}

.krf-plugin .white {
	background: #FFFFFF;
}

.krf-plugin .sepia {
	background: #E5DBC6;
}

.krf-plugin .black {
	background: #353535;
}

.book-reader-top-right .enyo-button-icon {
	margin: 8px 5px 5px;
}
.book-reader-bottom {
	margin: 0 50px;
}
.book-reader-bottom .enyo-button-icon {
	margin-left: 5px;
	margin-right: 5px;
}

.book-reader-bottom .back-button {
	-webkit-border-image: none;
	border-image: none;
	background-color: transparent;
}

.reading-book-title {
	line-height: 45px;
	width:390px;
	text-align:center;
	margin-left:-80px;
	margin-right:-230px;
	padding: 0 165px 0 83px;
}

.reading-book-title.landscape {
	position:relative;
	left:-185px;
	width:370px;
	text-align:left;
	margin:0;
	padding: 0;
}

.fontBox {
	z-index: 1;
	position: absolute;
	left: 10px;
	top:50px;
}

.brightness {
	position: absolute;
	top:40px;
}

.icon-button-clear {
	padding-left: 16px;
}


/* Body styles */
.markup {
	z-index: 1;
	position: absolute; 
	left: 100px;
	top:200px;
}

.furthest-read-title {
	font-weight: bold;
	font-size: 20px;
	padding-bottom: 10px;	
}

.delete-note-title {
	font-weight: bold;
	font-size: 20px;
	padding-bottom: 10px;	
}

.delete-note-text  {
	font-size: 14px;
	max-width: 210px;
	padding-bottom: 20px;
}

.furthest-read-text {
	font-size: 14px;
	max-width: 300px;
}

.furthest-read-text-last {
	padding-bottom: 15px;
}

.contentBody {
	z-index: 0;
	position: relative;
}

/* Bottom row styles*/
/*
.bookProgress {
	margin: 0px 15px 12px 15px;
}
.bookProgress.enyo-progress-bar {
	-webkit-border-image: url(../../images/progress-bar.png) 0 6 0 6 repeat repeat;
	-border-image: url(../../images/progress-bar.png) 0 6 0 6 repeat repeat;
}
.bookProgress .enyo-progress-bar-inner {
	-webkit-border-image: url(../../images/progress-bar-inner.png) 0 6 0 6 repeat repeat;
}
*/
.hr-bottom {
	margin: 8px 50px 6px 50px;
	z-index: 105
}
.bottomRowTranslate {
   /* -webkit-transform: perspective(600);
    -webkit-transform: translateZ(50); */
    -webkit-transform: translate3d(0,0,50);
}

.location-text {
	text-align: right;
	font-weight: bold;
	line-height: 50px;
	margin-top: -8px;
}
.location-text-left {
	text-align: left;
}
.location-slider {
	margin: -9px 14px 0;
}
.menuList {
	left: 630px;	
}

/* Book Info Popup */

.bookinfo-popup {
	right: 39px;
	bottom: 64px;
	min-width: 200px;
	max-width: 500px;
}

.balloon-bottom {
	width: 25px;
	height: 15px;
	background: url(../../images/popup-balloon-down.png) 0 0 no-repeat;
	position: absolute;
	right: 16px;
	bottom: -19px;
}

.bookinfo-popup .list-view-item:active {
	color: #999;
}

.bookinfo-popup .list-view-item {
}

/* Brightness Popup */

.brightness-popup {
	top: 48px;
	right: 60px;
}

.font-popup {
	right: 65px;
	top: 53px;
}

.brightness-popup,
.font-popup {
	position: absolute;
	padding: 0 10px;
}

.balloon-top {
	width: 25px;
	height: 14px;
	background: url(../../images/popup-balloon-up.png) 0 0 no-repeat;
	position: absolute;
	right: 47px;
	top: -16px;
}

.dimCover {
	z-index: 200;
	opacity: 0.6;
	position: absolute;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	background: #111;
}
/*
.brightness-popup .enyo-slider-button,
.font-popup .enyo-slider-button  {
	height: 20px;
	width: 18px;
	z-index: 50;
	position: absolute;
	overflow: hidden;
	margin: -8px -22px -23px -10px;
	background: url(../../images/slider-button.png) no-repeat;
}
.brightness-popup .enyo-slider-button,
.font-popup .enyo-slider-button  {
	background-position: 0 0;
}
.brightness-popup .enyo-slider-progress,
.font-popup .enyo-slider-progress {
	height: 7px;
	border-width: 0 4px;
	-webkit-border-image: url(../../images/slider.png) 0 4 0 4 stretch;
	margin: 22px 10px 21px;
}

.brightness-popup .enyo-slider-inner,
.font-popup .enyo-slider-inner {
	height: 7px;
	-webkit-border-image: url(../../images/slider-inner.png) 0 4 0 4 stretch;
	border-width: 0 4px;
}
*/

/* Font Setting Popup */
.font-style-controls {
	margin: 10px 10px -10px;
}
.font-style-controls .enyo-radiobutton {
	text-transform: inherit;
	overflow: hidden;
	text-overflow: ellipsis;
	font-family: Prelude Medium, Segoe UI, Arial, Helvetica, Sans-Serif;
	font-size: 14px;
	font-weight: bold;
	height: 35px;
	line-height: 35px;
	margin: 1px 0;
	border-width: 0px 5px;
	-webkit-box-sizing: border-box;
}
/* ... */

